<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@color/screen_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location Details"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:textColor="@color/main_black" />

        <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/city"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/main_black" />

        <EditText
            android:id="@+id/state_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/state"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/main_black" />

        <EditText
            android:id="@+id/country_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/country"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/main_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:textAllCaps="false"
                android:text="@string/confirm"
                android:background="@drawable/main_button_background" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:textAllCaps="false"
                android:layout_marginStart="6dp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:background="@drawable/main_button_background" />

        </LinearLayout>

    </LinearLayout>
</layout>