<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        tools:context=".view.MainActivity">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_homepage_logo"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchman"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp"
                android:textColor="@color/main_black" />

        </LinearLayout>

        <View
            android:id="@+id/top_hr"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            android:background="@color/stroke_grey" />

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_marginTop="32dp"
            android:padding="12dp"
            android:background="@drawable/main_border"
            android:layout_marginEnd="@dimen/page_margin"
            app:layout_constraintTop_toBottomOf="@id/top_hr"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/main_black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/main_black"
                android:text="@string/location_not_added"
                android:layout_marginTop="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:textAllCaps="false"
                    android:text="@string/detect_location"
                    android:background="@drawable/main_button_background" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:textAllCaps="false"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:text="@string/add_manually"
                    android:background="@drawable/main_button_background" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/location_layout"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_marginEnd="@dimen/page_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/weather_data_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/main_border"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_sunny"
                        android:contentDescription="@string/button_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_data"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/main_black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_details_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/main_border"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_assessment"
                        android:contentDescription="@string/button_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_details"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/main_black" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/notifications_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/main_border"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_notifications"
                        android:contentDescription="@string/button_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/main_black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clear_data_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/main_border"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_clear_data"
                        android:contentDescription="@string/button_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_data"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="14sp"
                        android:textColor="@color/main_black" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>