<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        tools:context=".view.WeatherDataActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_homepage_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/weather_data"
                    android:textColor="@color/main_black"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/top_hr"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                android:background="@color/stroke_grey" />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/back_button"
                android:focusable="true"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/title_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/title_layout" />

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginTop="32dp"
                android:padding="12dp"
                android:background="@drawable/main_border"
                android:layout_marginEnd="@dimen/page_margin"
                app:layout_constraintTop_toBottomOf="@id/top_hr"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_location"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/main_black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:textColor="@color/main_black"
                    android:text="Kathmandu, Nepal"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_locations"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/main_black"
                    android:layout_marginTop="12dp"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/other_locations_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="4dp" />

                <Button
                    android:id="@+id/addOtherLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"
                    android:text="@string/add"
                    android:background="@drawable/main_button_background" />
            </LinearLayout>

            <!--<androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_data_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginEnd="@dimen/page_margin"
                app:layout_constraintTop_toBottomOf="@id/location_layout"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="36dp" />-->

            <TextView
                android:id="@+id/weather_data_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginEnd="@dimen/page_margin"
                app:layout_constraintTop_toBottomOf="@id/location_layout"
                android:layout_marginTop="36dp" />

            <Button
                android:id="@+id/fetch_weather_data_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/weather_data_recycler_view"
                android:fontFamily="@font/poppins"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginEnd="@dimen/page_margin"
                android:textColor="@color/white"
                android:text="@string/fetch_weather_data"
                android:background="@drawable/main_button_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>